--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="refresh" content="0; URL=//app/index.html" /> //0 - время через которое произойдёт переадресация, URL - непосредственно ссылка
+    <!-- <meta http-equiv="refresh" content="0; URL=https://dmitriyfox.github.io/content_fox/app/index.html" />  -->
     <title>Document</title>
 </head>
 <body></body>
