--- a/app/index.html
+++ b/app/index.html
@@ -68,7 +68,7 @@
 					aspernatur quaerat, suscipit commodi culpa.</p>
 			</div>
 			<div class="ready-right">
-				<img class="img-responsive" src="//img/example2.jpg" alt="Example">
+				<img class="img-responsive" src="img/example2.jpg" alt="Example">
 			</div>
 		</div>
 	</section>
