--- a/app/index.html
+++ b/app/index.html
@@ -161,7 +161,9 @@
 				Create you
 				<span>content</span>
 			</div>
-			<div class="footer-copy">~©~</div>
+			<div class="footer-copy">© Dmitriy Lisin.
+				<script>document.write(new Date().getFullYear())</script>
+			</div>
 		</div>
 	</footer>
 
