--- a/app/index.html
+++ b/app/index.html
@@ -24,7 +24,7 @@
 	<header class="main-header grid"
 		style="background-image: url(img/0-header1.webp); background-image: srcset(url(img/0-header1.jpg));">
 		<div class="header-content grid">
-			<h1 class="header-title">Create content for you</h1>
+			<h1 class="header-title">Create content for&nbsp;you</h1>
 			<div class="header-buttons">
 				<a href="#" class="button">Follow</a>
 				<a href="#" class="button button-grey">Go Home</a>
