adaptive portfolio block

--- a/app/index.html
+++ b/app/index.html
@@ -27,7 +27,7 @@
 			<h1 class="header-title">Create content for&nbsp;you</h1>
 			<div class="header-buttons">
 				<a href="#" class="button">Follow</a>
-				<a href="#" class="button button-grey">Go Home</a>
+				<a href="#" class="button button--grey">Go Home</a>
 			</div>
 		</div>
 	</header>
@@ -58,10 +58,10 @@
 		</div>
 	</section>
 
-	<section class="section-ready landing-section">
+	<section class="ready-section landing-section">
 		<div class="container grid">
 			<div class="ready-left">
-				<h2 class="title title__ready-left">I`am ready create for you content</h2>
+				<h2 class="title ready-left__title">I`am ready create for you content</h2>
 				<p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Libero, ad esse nesciunt quaerat odio nulla
 					ex quia mollitia? Nisi ad, quos perferendis tenetur voluptatem animi rerum soluta modi vitae itaque?
 				</p>
@@ -79,7 +79,7 @@
 		</div>
 	</section>
 
-	<section class="formsection">
+	<section class="form-section">
 		<div class="container">
 			<form class="form grid">
 				<div><input class="form__input" type="text" name="name" placeholder="You name..." required></div>
@@ -90,15 +90,15 @@
 		</div>
 	</section>
 
-	<section class="landing-section section-blog">
+	<section class="blog-section landing-section">
 		<div class="container">
-			<h2 class="title section-blog__title">Blog about create content for you</h2>
+			<h2 class="title blog-section__title">Blog about create content for you</h2>
 			<div class="blog-home grid">
 				<a href="#" class="blog-item grid">
 					<span class="blog-item-img"
 						style="background-image: url(img/0-header2.webp); background-image: image-set(url(img/0-header2.jpg) 1x);"></span>
 					<span class="blog-item-content grid">
-						<h4 class="blog-item-content__title">Our work in corporate</h4>
+						<h3 class="blog-item-content__title">Our work in corporate</h3>
 						<p class="blog-item-content__text">Lorem, ipsum dolor sit amet consectetur adipisicing elit.
 							Exercitationem, voluptatum..</p>
 					</span>
@@ -107,7 +107,7 @@
 					<span class="blog-item-img"
 						style="background-image: url(img/0-header3.webp); background-image: image-set(url(img/0-header3.jpg) 1x);"></span>
 					<span class="blog-item-content grid">
-						<h4 class="blog-item-content__title">Our work in corporate</h4>
+						<h3 class="blog-item-content__title">Our work in corporate</h3>
 						<p class="blog-item-content__text">Lorem, ipsum dolor sit amet consectetur adipisicing elit.
 							Exercitationem, voluptatum..</p>
 					</span>
@@ -116,7 +116,7 @@
 					<span class="blog-item-img"
 						style="background-image: url(img/0-header4.webp); background-image: image-set(url(img/0-header4.jpg) 1x);"></span>
 					<span class="blog-item-content grid">
-						<h4 class="blog-item-content__title">Our work in corporate</h4>
+						<h3 class="blog-item-content__title">Our work in corporate</h3>
 						<p class="blog-item-content__text">Lorem, ipsum dolor sit amet consectetur adipisicing elit.
 							Exercitationem, voluptatum..</p>
 					</span>
@@ -125,7 +125,7 @@
 					<span class="blog-item-img"
 						style="background-image: url(img/0-header6.webp); background-image: image-set(url(img/0-header6.jpg) 1x);"></span>
 					<span class="blog-item-content grid">
-						<h4 class="blog-item-content__title">Our work in corporate</h4>
+						<h3 class="blog-item-content__title">Our work in corporate</h3>
 						<p class="blog-item-content__text">Lorem, ipsum dolor sit amet consectetur adipisicing elit.
 							Exercitationem, voluptatum..</p>
 					</span>
@@ -134,7 +134,7 @@
 					<span class="blog-item-img"
 						style="background-image: url(img/0-header7.webp);background-image: image-set(url(img/0-header7.jpg) 1x);"></span>
 					<span class="blog-item-content grid">
-						<h4 class="blog-item-content__title">Our work in corporate</h4>
+						<h3 class="blog-item-content__title">Our work in corporate</h3>
 						<p class="blog-item-content__text">Lorem, ipsum dolor sit amet consectetur adipisicing elit.
 							Exercitationem, voluptatum..</p>
 					</span>
@@ -143,7 +143,7 @@
 					<span class="blog-item-img"
 						style="background-image: url(img/0-header9.webp);background-image: image-set(url(img/0-header9.jpg) 1x);"></span>
 					<span class="blog-item-content grid">
-						<h4 class="blog-item-content__title">Our work in familly business offer</h4>
+						<h3 class="blog-item-content__title">Our work in familly business offer</h3>
 						<p class="blog-item-content__text">Lorem, ipsum dolor sit amet consectetur adipisicing elit.
 							Exercitationem, voluptatum..</p>
 					</span>
@@ -157,7 +157,7 @@
 
 	<footer class="main-footer">
 		<div class="container">
-			<div class="footer__logo">
+			<div class="main-footer__logo">
 				Create you
 				<span>content</span>
 			</div>
