--- a/app/index.html
+++ b/app/index.html
@@ -61,7 +61,8 @@
 	<section class="ready-section landing-section">
 		<div class="container grid">
 			<div class="ready-left">
-				<h2 class="title ready-left__title">I`am ready create for you content</h2>
+				<h2 class="title ready-left__title">Create content for you<span class="ready-left__title-desc">book,
+						presentation, site and&nbsp;more</span></h2>
 				<p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Libero, ad esse nesciunt quaerat odio nulla
 					ex quia mollitia? Nisi ad, quos perferendis tenetur voluptatem animi rerum soluta modi vitae itaque?
 				</p>
