--- a/app/index.html
+++ b/app/index.html
@@ -36,22 +36,29 @@
 		<div class="portfolio-item grid"
 			style="background-image: url(img/1.webp); background-image: srcset(url(img/1.png));"><span
 				class="portfolio-item__title">3D&nbsp;objects</span></div>
-		<div class="portfolio-item grid" style="background-image: url(img/2.jpg)"><span
+		<div class="portfolio-item grid"
+			style="background-image: url(img/2.webp); background-image: srcset(url(img/2.jpg))"><span
 				class="portfolio-item__title">Artist</span></div>
-		<div class="portfolio-item grid" style="background-image: url(img/3.jpg)"><span
+		<div class="portfolio-item grid"
+			style="background-image: url(img/3.webp); background-image: srcset(url(img/3.jpg))"><span
 				class="portfolio-item__title">Persons</span></div>
-		<div class="portfolio-item grid" style="background-image: url(img/4.jpg)"><span
+		<div class="portfolio-item grid"
+			style="background-image: url(img/4.webp); background-image: srcset(url(img/4.jpg))"><span
 				class="portfolio-item__title">Art style</span></div>
-		<div class="portfolio-item grid" style="background-image: url(img/5.jpg)"><span
+		<div class="portfolio-item grid"
+			style="background-image: url(img/5.webp); background-image: srcset(url(img/5.jpg))"><span
 				class="portfolio-item__title">Cartoon</span></div>
-		<div class="portfolio-item grid" style="background-image: url(img/6.jpg)"><span
+		<div class="portfolio-item grid"
+			style="background-image: url(img/6.webp); background-image: srcset(url(img/6.jpg))"><span
 				class="portfolio-item__title">Graphics</span></div>
-		<div class="portfolio-item grid" style="background-image: url(img/7.jpg)"><span
+		<div class="portfolio-item grid"
+			style="background-image: url(img/7.webp); background-image: srcset(url(img/7.jpg))"><span
 				class="portfolio-item__title">Nature art</span></div>
-		<div class="portfolio-item grid" style="background-image: url(img/8.jpg)"><span
+		<div class="portfolio-item grid"
+			style="background-image: url(img/8.webp); background-image: srcset(url(img/8.jpg))"><span
 				class="portfolio-item__title">Characters</span></div>
 		<div class="portfolio-item grid"
-			style="background-image: url(img/9.webp); background-image: image-set(url(img/9.jpg) 1x);"><span
+			style="background-image: url(img/9.webp); background-image: srcset(url(img/9.jpg));"><span
 				class="portfolio-item__title">Background</span></div>
 		<div class="buttoncase portfolio-section__buttoncase text-center">
 			<a href="portfolio.html" class="button">View portfolio</a>
@@ -73,7 +80,7 @@
 			</div>
 			<div class="ready-right">
 				<picture>
-					<source type="image/webp" srcset="img/DmitriyFox12_foxCharacter.webp">
+					<source type="image/webp" srcset="img/DmitriyFox12_foxCharacter800px.webp">
 					<source type="image/jpeg" srcset="img/DmitriyFox12_foxCharacter800px.jpg">
 					<img class="img-responsive" src="img/DmitriyFox12_foxCharacter800px.jpg" alt="Example">
 				</picture>
