radius all block

--- a/app/index.html
+++ b/app/index.html
@@ -47,23 +47,27 @@
 			style="background-image: url(img/1024/2.webp); background-image: srcset(url(img/1024/2.jpg))"><span
 				class="portfolio-item__title">Painting</span></div>
 		<div class="portfolio-item grid"
-			style="background-image: url(img/1024/0-header16.webp); background-image: srcset(url(img/1024/0-header16.jpg))"><span
-				class="portfolio-item__title">Characters</span></div>
+			style="background-image: url(img/1024/0-header16.webp); background-image: srcset(url(img/1024/0-header16.jpg))">
+			<span class="portfolio-item__title">Characters</span>
+		</div>
 		<div class="portfolio-item grid"
 			style="background-image: url(img/1024/4.webp); background-image: srcset(url(img/1024/4.jpg))"><span
 				class="portfolio-item__title">Art style</span></div>
 		<div class="portfolio-item grid"
-			style="background-image: url(img/1024/DimaFox_flower_white_petals.webp); background-image: srcset(url(img/1024/DimaFox_flower_white_petals.jpg))"><span
-				class="portfolio-item__title">Photo style</span></div>
+			style="background-image: url(img/1024/DimaFox_flower_white_petals.webp); background-image: srcset(url(img/1024/DimaFox_flower_white_petals.jpg))">
+			<span class="portfolio-item__title">Photo style</span>
+		</div>
 		<div class="portfolio-item grid"
-			style="background-image: url(img/1024/DmitriyFox_character_4.webp); background-image: srcset(url(img/1024/DmitriyFox_character_4.jpg))"><span
-				class="portfolio-item__title">Graphics</span></div>
+			style="background-image: url(img/1024/DmitriyFox_character_4.webp); background-image: srcset(url(img/1024/DmitriyFox_character_4.jpg))">
+			<span class="portfolio-item__title">Graphics</span>
+		</div>
 		<div class="portfolio-item grid"
 			style="background-image: url(img/1024/7.webp); background-image: srcset(url(img/1024/7.jpg))"><span
 				class="portfolio-item__title">Nature art</span></div>
 		<div class="portfolio-item grid"
-			style="background-image: url(img/1024/0-header14.webp); background-image: srcset(url(img/1024/0-header14.jpg))"><span
-				class="portfolio-item__title">Devian Art</span></div>
+			style="background-image: url(img/1024/0-header14.webp); background-image: srcset(url(img/1024/0-header14.jpg))">
+			<span class="portfolio-item__title">Devian Art</span>
+		</div>
 		<div class="portfolio-item grid"
 			style="background-image: url(img/1024/9.webp); background-image: srcset(url(img/1024/9.jpg));"><span
 				class="portfolio-item__title">Background</span></div>
@@ -89,7 +93,8 @@
 				<picture>
 					<source type="image/webp" srcset="img/1024/DmitriyFox12_foxCharacter.webp">
 					<source type="image/jpeg" srcset="img/1024/DmitriyFox12_foxCharacter.jpg">
-					<img class="ready-right__img img-responsive" src="img/1024/DmitriyFox12_foxCharacter.jpg" alt="Example">
+					<img class="ready-right__img img-responsive" src="img/1024/DmitriyFox12_foxCharacter.jpg"
+						alt="Example">
 				</picture>
 			</div>
 		</div>
@@ -99,15 +104,17 @@
 		<div class="container">
 			<form class="form grid">
 				<div>
-					<input class="form__input" type="text" name="name" placeholder="You name..." required>
+					<input class="form__input" id="name" type="text" name="name" placeholder="You name..." required>
 				</div>
 				<div>
-					<input class="form__input" type="text" name="name" placeholder="You tel...">
+					<input class="form__input" id="tel" type="tel" name="tel" placeholder="You tel...">
 				</div>
 				<div>
-					<input class="form__input" type="text" name="name" placeholder="You e-mail...">
+					<input class="form__input" id="email" type="email" name="email" placeholder="You e-mail...">
 				</div>
-				<div><button class="button form__button">I want content</button></div>
+				<!-- <div> -->
+					<button class="button form__button" type="submit">I want content</button>
+				<!-- </div> -->
 			</form>
 		</div>
 	</section>
