--- a/app/index.html
+++ b/app/index.html
@@ -104,13 +104,13 @@
 		<div class="container">
 			<form class="form grid">
 				<div>
-					<input class="form__input" id="name" type="text" name="name" placeholder="You name..." required>
+					<input class="form__input" required id="name" type="text" name="name" placeholder="You name..." required>
 				</div>
 				<div>
-					<input class="form__input" id="tel" type="tel" name="tel" placeholder="You tel...">
+					<input class="form__input" required id="tel" type="tel" name="tel" placeholder="You tel...">
 				</div>
 				<div>
-					<input class="form__input" id="email" type="email" name="email" placeholder="You e-mail...">
+					<input class="form__input" required id="email" type="email" name="email" placeholder="You e-mail...">
 				</div>
 				<!-- <div> -->
 					<button class="button form__button" type="submit">I want content</button>
