--- a/app/index.html
+++ b/app/index.html
@@ -34,7 +34,7 @@
 			<h1 class="header-content__title">Create content for&nbsp;you</h1>
 			<div class="header-buttons">
 				<a href="#" class="button">Follow</a>
-				<a href="//portfolio.html" class="button button--grey">Go Home</a>
+				<a href="../portfolio.html" class="button button--grey">Go Home</a>
 			</div>
 		</div>
 	</header>
