--- a/portfolio.html
+++ b/portfolio.html
@@ -15,7 +15,7 @@
 	<meta name="theme-color" content="#ffffff">
 	<link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
     <title>Portfolio Lisin Dmitriy</title>
-    <link rel="stylesheet" href="css/main.min.css">
+    <link rel="stylesheet" href="port.css">
 </head>
 <body>
 
