fix portfolio dir

--- a/app/portfolio.html
+++ b/app/portfolio.html
@@ -15,11 +15,11 @@
 	<meta name="theme-color" content="#ffffff">
 	<link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
     <title>Portfolio Lisin Dmitriy</title>
-    <link rel="stylesheet" href="port.css">
+    <link rel="stylesheet" href="css/main.min.css">
 </head>
 <body>
 
-    <header class="main-header">
+    <header class="portfolio-header">
         <h1 class="portfolio__title">
             30 сентября
         </h1>
@@ -29,6 +29,19 @@
             матерь их София<br>
         </h2>
     </header>
+    
+    <header class="portfolio-header">
+        <h1 class="portfolio__title portfolio__title--fz --blue">
+            14 октября
+        </h1>
+        <h2 class="portfolio__subtitle portfolio__subtitle--fz --blue">
+            <span class="--red">Праздник</span><br>
+            Покрова<br>
+            Пресвятой<br>
+            Богородицы<br>
+        </h2>
+    </header>
+
 	<script src="js/scripts.min.js"></script>
 
 </body>
