--- a/app/portfolio.html
+++ b/app/portfolio.html
@@ -1,48 +1,57 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="">
-	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-	<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
-	<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-	<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
-	<link rel="manifest" href="/site.webmanifest">
-	<link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5">
-	<meta name="msapplication-TileColor" content="#da532c">
-	<meta name="theme-color" content="#ffffff">
-	<link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+    <link rel="manifest" href="/site.webmanifest">
+    <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5">
+    <meta name="msapplication-TileColor" content="#da532c">
+    <meta name="theme-color" content="#ffffff">
+    <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
     <title>Portfolio Lisin Dmitriy</title>
     <link rel="stylesheet" href="css/main.min.css">
 </head>
+
 <body>
 
     <header class="portfolio-header">
-        <h1 class="portfolio__title">
-            30 сентября
-        </h1>
-        <h2 class="portfolio__subtitle">
-            мученицы Вера,<br>
-            Надежда, Любовь и<br>
-            матерь их София<br>
-        </h2>
-    </header>
-    
-    <header class="portfolio-header">
-        <h1 class="portfolio__title portfolio__title--fz --blue">
-            14 октября
-        </h1>
-        <h2 class="portfolio__subtitle portfolio__subtitle--fz --blue">
-            <span class="--red">Праздник</span><br>
-            Покрова<br>
-            Пресвятой<br>
-            Богородицы<br>
-        </h2>
+        <div class="container">
+            <div class="portfolio">
+                <a class="portfolio-logo" href="index.html">
+                    <img class="portfolio-logo__img" src="android-chrome-192x192.png" alt="logo" width="50">
+                </a>
+                <h1 class="portfolio__title">
+                    Portfolio
+                </h1>
+                <nav class="portfolio-nav">
+                    <ul class="portfolio-nav__list">
+                        <li class="portfolio-nav__item">
+                            <button class="portfolio-nav__btn">
+                                <img class="portfolio-nav__img" src="img/512/0-header1.jpg" alt="tag" width="40">
+                                <h2 class="portfolio-nav__tag">Art</h2>
+                            </button>
+                        </li>
+                    </ul>
+                </nav>
+
+
+            </div>
+
+        </div>
+
     </header>
 
-	<script src="js/scripts.min.js"></script>
+    
+
+    <script src="js/scripts.min.js"></script>
 
 </body>
+
 </html>
