work on the tag in heder

--- a/app/portfolio.html
+++ b/app/portfolio.html
@@ -21,7 +21,7 @@
 
 <body>
 
-    <header class="portfolio-header">
+    <header class="header portfolio-header">
         <div class="container">
             <div class="portfolio">
                 <a class="portfolio-logo" href="index.html">
@@ -32,12 +32,95 @@
                 </h1>
                 <nav class="portfolio-nav">
                     <ul class="portfolio-nav__list">
+                        
                         <li class="portfolio-nav__item">
                             <button class="portfolio-nav__btn">
-                                <img class="portfolio-nav__img" src="img/512/0-header1.jpg" alt="tag" width="40">
+                                <picture>
+                                    <source srcset="img/512/0-header1.webp" type="image/webp">
+                                    <source srcset="img/512/0-header1.jpg" type="image/jpeg">
+                                    <img class="portfolio-nav__img" src="img/512/0-header1.jpg" alt="tag" width="30">
+                                </picture>
                                 <h2 class="portfolio-nav__tag">Art</h2>
                             </button>
                         </li>
+
+                        <li class="portfolio-nav__item">
+                            <button class="portfolio-nav__btn">
+                                <picture class="portfolio-nav__img">
+                                    <source srcset="img/512/0-header2.webp" type="image/webp">
+                                    <source srcset="img/512/0-header2.jpg" type="image/jpeg">
+                                    <img  src="img/512/0-header2.jpg" alt="tag" width="30" height="30">
+                                </picture>
+                                <h2 class="portfolio-nav__tag">Art</h2>
+                            </button>
+                        </li>
+
+                        <li class="portfolio-nav__item">
+                            <button class="portfolio-nav__btn">
+                                <picture>
+                                    <source srcset="img/512/0-header1.webp" type="image/webp">
+                                    <source srcset="img/512/0-header1.jpg" type="image/jpeg">
+                                    <img class="portfolio-nav__img" src="img/512/0-header1.jpg" alt="tag" width="30">
+                                </picture>
+                                <h2 class="portfolio-nav__tag">Art</h2>
+                            </button>
+                        </li>
+
+                        <li class="portfolio-nav__item">
+                            <button class="portfolio-nav__btn">
+                                <picture>
+                                    <source srcset="img/512/0-header1.webp" type="image/webp">
+                                    <source srcset="img/512/0-header1.jpg" type="image/jpeg">
+                                    <img class="portfolio-nav__img" src="img/512/0-header1.jpg" alt="tag" width="30">
+                                </picture>
+                                <h2 class="portfolio-nav__tag">Art</h2>
+                            </button>
+                        </li>
+
+                        <li class="portfolio-nav__item">
+                            <button class="portfolio-nav__btn">
+                                <picture>
+                                    <source srcset="img/512/0-header1.webp" type="image/webp">
+                                    <source srcset="img/512/0-header1.jpg" type="image/jpeg">
+                                    <img class="portfolio-nav__img" src="img/512/0-header1.jpg" alt="tag" width="30">
+                                </picture>
+                                <h2 class="portfolio-nav__tag">Art</h2>
+                            </button>
+                        </li>
+
+                        <li class="portfolio-nav__item">
+                            <button class="portfolio-nav__btn">
+                                <picture>
+                                    <source srcset="img/512/0-header1.webp" type="image/webp">
+                                    <source srcset="img/512/0-header1.jpg" type="image/jpeg">
+                                    <img class="portfolio-nav__img" src="img/512/0-header1.jpg" alt="tag" width="30">
+                                </picture>
+                                <h2 class="portfolio-nav__tag">Art</h2>
+                            </button>
+                        </li>
+
+                        <li class="portfolio-nav__item">
+                            <button class="portfolio-nav__btn">
+                                <picture>
+                                    <source srcset="img/512/0-header1.webp" type="image/webp">
+                                    <source srcset="img/512/0-header1.jpg" type="image/jpeg">
+                                    <img class="portfolio-nav__img" src="img/512/0-header1.jpg" alt="tag" width="30">
+                                </picture>
+                                <h2 class="portfolio-nav__tag">Art</h2>
+                            </button>
+                        </li>
+
+                        <li class="portfolio-nav__item">
+                            <button class="portfolio-nav__btn">
+                                <picture>
+                                    <source srcset="img/512/0-header1.webp" type="image/webp">
+                                    <source srcset="img/512/0-header1.jpg" type="image/jpeg">
+                                    <img class="portfolio-nav__img" src="img/512/0-header1.jpg" alt="tag" width="30">
+                                </picture>
+                                <h2 class="portfolio-nav__tag">Art</h2>
+                            </button>
+                        </li>
+                        
                     </ul>
                 </nav>
 
