--- a/app/index.html
+++ b/app/index.html
@@ -187,8 +187,9 @@
 	<footer class="main-footer">
 		<div class="container">
 			<div class="main-footer__logo">
-				Create you
+				We will create
 				<span>content</span>
+				for you
 			</div>
 			<div class="footer-copy">© Dmitriy Lisin.
 				<script>document.write(new Date().getFullYear())</script>
