--- a/app/portfolio.html
+++ b/app/portfolio.html
@@ -25,7 +25,11 @@
         <div class="container">
             <div class="portfolio">
                 <a class="portfolio-logo" href="index.html">
-                    <img class="portfolio-logo__img" src="android-chrome-192x192.png" alt="logo" width="50">
+                    <picture class="portfolio-logo__img">
+                        <source srcset="img/512/DmitriyFox_character_2.webp" type="image/webp">
+                        <source srcset="img/512/DmitriyFox_character_2.jpg" type="image/jpeg">
+                        <img src="img/512/DmitriyFox_character_2.jpg" alt="logo">
+                    </picture>
                 </a>
                 <h1 class="portfolio__title">
                     Portfolio
@@ -51,7 +55,7 @@
                                     <source srcset="img/512/0-header2.jpg" type="image/jpeg">
                                     <img  src="img/512/0-header2.jpg" alt="tag" width="30" height="30">
                                 </picture>
-                                <h2 class="portfolio-nav__tag">Art</h2>
+                                <h2 class="portfolio-nav__tag">Characters</h2>
                             </button>
                         </li>
 
@@ -62,7 +66,7 @@
                                     <source srcset="img/512/0-header1.jpg" type="image/jpeg">
                                     <img class="portfolio-nav__img" src="img/512/0-header1.jpg" alt="tag" width="30">
                                 </picture>
-                                <h2 class="portfolio-nav__tag">Art</h2>
+                                <h2 class="portfolio-nav__tag">Concept</h2>
                             </button>
                         </li>
 
@@ -73,7 +77,7 @@
                                     <source srcset="img/512/0-header1.jpg" type="image/jpeg">
                                     <img class="portfolio-nav__img" src="img/512/0-header1.jpg" alt="tag" width="30">
                                 </picture>
-                                <h2 class="portfolio-nav__tag">Art</h2>
+                                <h2 class="portfolio-nav__tag">3D</h2>
                             </button>
                         </li>
 
@@ -84,7 +88,7 @@
                                     <source srcset="img/512/0-header1.jpg" type="image/jpeg">
                                     <img class="portfolio-nav__img" src="img/512/0-header1.jpg" alt="tag" width="30">
                                 </picture>
-                                <h2 class="portfolio-nav__tag">Art</h2>
+                                <h2 class="portfolio-nav__tag">Abstract</h2>
                             </button>
                         </li>
 
@@ -95,7 +99,7 @@
                                     <source srcset="img/512/0-header1.jpg" type="image/jpeg">
                                     <img class="portfolio-nav__img" src="img/512/0-header1.jpg" alt="tag" width="30">
                                 </picture>
-                                <h2 class="portfolio-nav__tag">Art</h2>
+                                <h2 class="portfolio-nav__tag">Graphic</h2>
                             </button>
                         </li>
 
@@ -106,7 +110,7 @@
                                     <source srcset="img/512/0-header1.jpg" type="image/jpeg">
                                     <img class="portfolio-nav__img" src="img/512/0-header1.jpg" alt="tag" width="30">
                                 </picture>
-                                <h2 class="portfolio-nav__tag">Art</h2>
+                                <h2 class="portfolio-nav__tag">HD</h2>
                             </button>
                         </li>
 
@@ -117,7 +121,7 @@
                                     <source srcset="img/512/0-header1.jpg" type="image/jpeg">
                                     <img class="portfolio-nav__img" src="img/512/0-header1.jpg" alt="tag" width="30">
                                 </picture>
-                                <h2 class="portfolio-nav__tag">Art</h2>
+                                <h2 class="portfolio-nav__tag">Object</h2>
                             </button>
                         </li>
                         
