start btn tag image before background

--- a/app/portfolio.html
+++ b/app/portfolio.html
@@ -131,13 +131,7 @@
 
                         <li class="portfolio-nav__item">
                             <button class="portfolio-nav__btn">
-                                <picture class="portfolio-nav__img">
-                                    <source srcset="img/512/DimaXX_iselilja.webp" type="image/webp">
-                                    <source srcset="img/512/DimaXX_iselilja.jpg" type="image/jpeg">
-                                    <img src="img/512/DimaXX_iselilja.jpg"
-                                        alt="tag">
-                                </picture>
-                                <h2 class="portfolio-nav__tag">Enviroment</h2>
+                                Enviroment
                             </button>
                         </li>
 
